unpackaged/main/default/objects/adroll__AdRollAcctLvlTrackingData__c/adroll__AdRollAcctLvlTrackingData__c.object-meta.xml
<CustomObject>
    <description>Object stores the Account-level Tracking Data sent by RollWorks. The data is aggregated per day per email address.</description>
    <label>RollWorks Account Level Tracking Data</label>
    <nameField>
        <displayFormat>ARALTD-{000000000}</displayFormat>
        <label>RollWorks Account Level Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollWorks Account Level Tracking Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>