unpackaged/main/default/objects/adroll__AdRollAcctLvlTrackingData__c/fields/adroll__ClickConversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__ClickConversion__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of clicks that were converted.</description>
    <inlineHelpText>Number of clicks that were converted.</inlineHelpText>
    <label>CTC</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>