unpackaged/main/default/objects/adroll__AdRollAcctLvlTrackingData__c/fields/adroll__Conversions__c.field-meta.xml
<CustomField>
    <fullName>adroll__Conversions__c</fullName>
    <label>Total Conversions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>