unpackaged/main/default/objects/adroll__AdRollAcctLvlTrackingData__c/fields/adroll__ImpressionCosts__c.field-meta.xml
<CustomField>
    <fullName>adroll__ImpressionCosts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Costs Incurred for the Impressions</description>
    <inlineHelpText>Costs Incurred for the Impressions</inlineHelpText>
    <label>Impression Costs</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>