unpackaged/main/default/objects/adroll__AdRollAcctLvlTrackingData__c/fields/adroll__Is_Cross_Device__c.field-meta.xml
<CustomField>
    <fullName>adroll__Is_Cross_Device__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cross Device (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>