unpackaged/main/default/objects/adroll__AdRollAcctLvlTrackingData__c/fields/adroll__IsAggregated__c.field-meta.xml
<CustomField>
    <fullName>adroll__IsAggregated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records added for Aggregation are marked to True so that it can be deleted from the system later..</description>
    <label>IsAggregated</label>
    <type>Checkbox</type>
</CustomField>