unpackaged/main/default/objects/adroll__AdRollAcctLvlTrackingData__c/fields/adroll__Revenue__c.field-meta.xml
<CustomField>
    <fullName>adroll__Revenue__c</fullName>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>