unpackaged/main/default/objects/adroll__AdRollAcctLvlTrackingData__c/fields/adroll__unique_imp_visitors__c.field-meta.xml
<CustomField>
    <fullName>adroll__unique_imp_visitors__c</fullName>
    <label>Unique Impressions Visitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>