unpackaged/main/default/objects/adroll__AdRollAcctLvlTrackingData__c/fields/adroll__ViewConversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__ViewConversion__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Views that converted.</description>
    <inlineHelpText>Number of Views that converted.</inlineHelpText>
    <label>View Conversion</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>