unpackaged/main/default/objects/adroll__AdRollAcctLvlTrackingData__c/listViews/adroll__All.listView-meta.xml
<ListView>
    <fullName>adroll__All</fullName>
    <columns>NAME</columns>
    <columns>adroll__Date__c</columns>
    <columns>adroll__ImpressionCosts__c</columns>
    <columns>adroll__Impressions__c</columns>
    <columns>adroll__ClickConversion__c</columns>
    <columns>adroll__ClickCosts__c</columns>
    <columns>adroll__Clicks__c</columns>
    <columns>adroll__ViewConversion__c</columns>
    <columns>adroll__Error__c</columns>
    <columns>adroll__Account__c</columns>
    <columns>adroll__Website__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>