unpackaged/main/default/objects/adroll__AdRollAcctLvlTrackingData__c/listViews/adroll__All1.listView-meta.xml
<ListView>
    <fullName>adroll__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>